# rust-workspace-scaffolding.archetype

./: README.md  archetype.rhai  archetype.yaml
contents/base/{{ project-name }}/: Cargo.toml  README.md  SPECIFICATION.md
contents/crate-bin/{{ project-name }}/crates/{{ project-name }}-{{ crate-name }}/: Cargo.toml
contents/crate-lib/{{ project-name }}/crates/{{ project-name }}-{{ crate-name }}/: Cargo.toml  README.md  SPECIFICATION.md
contents/crate-xtask/{{ project-name }}/xtask/: Cargo.toml  README.md
contents/crate-xtask/{{ project-name }}/xtask/src/: main.rs
