[package]
name = "{{ project-name }}-{{ crate-name }}"
description = "{{ project-title }}: {{ crate-title }}"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "{{ project-name }}"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
